servlet runs properly; need to deal with file paths